created basic EPG/ANP/VRF/BD/TN creation using roles

--- a/aci-ansible-roles/roles/CreateBD/tasks/main.yml
+++ b/aci-ansible-roles/roles/CreateBD/tasks/main.yml
@@ -1,3 +1,11 @@
 ---
 
-- name: Create Bridge Domain
+- name: Add Bridge Domain
+  aci_bd:
+    host: "{{ apic }}"
+    password: "{{ pw }}"
+    validate_certs: no
+    state: present
+    tenant: "{{ TN }}"
+    bd: "{{ BD }}"
+    vrf: "{{ VRF }}"
