--- a/aci-ansible-roles/roles/CreateEPG/tasks/main.yml
+++ b/aci-ansible-roles/roles/CreateEPG/tasks/main.yml
@@ -2,13 +2,11 @@
 
 - name: Create an EPG
   aci_epg:
-        hostname: "{{ inventory_hostname }}"
-        username: "{{ username }}"
-        password: "{{ password }}"
+        hostname: "{{ apic }}"
+        password: "{{ pw }}"
         validate_certs: no
-        tenant: "{{ tenant_name }}"
-        ap: "{{ tenant_name }}_app"
-        epg: "{{ epg_name }}"
-        description: "{{ item.description }}"
-        bd: "{{ tenant_name }}_bd"
+        tenant: "{{ TN }}"
+        ap: "{{ AP }}_app"
+        epg: "{{ EPG }}"
+        bd: "{{ BD }}"
         state: present
