--- a/aci-ansible-roles/group_vars/dcloud-fabric.yml
+++ b/aci-ansible-roles/group_vars/dcloud-fabric.yml
@@ -1,7 +1,14 @@
 ---
 
 TN: ansible-tenant-bob
-EPG: ansible-web
+EPG: 
+  - ansible-web
+  - ansible-db
 VRF: ansible-bob
-BD: ansible-web-bd
+BD: 
+  - ansible-web-bd
+  - ansible-db-bd
 AP: ansible-web
+epg_data: 
+  - { EPG_Name: "{{ EPG[0] }}", BD_Name: "{{ BD[0] }}" }
+  - { EPG_Name: "ansible-db", BD_Name: "ansible-db-bd" }
