--- a/aci-ansible-roles/roles/DeleteTN/tasks/main.yml
+++ b/aci-ansible-roles/roles/DeleteTN/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 
-- name: Create Tenant "{{ TN }}"
+- name: Delete Tenant "{{ TN }}"
   aci_tenant:
     host: "{{ apic }}"
     password: "{{ pw }}"
     validate_certs: no
     tenant: "{{ TN }}"
     description: tenant created by ansible
-    state: present
+    state: absent
