added config snapshot role

--- a/aci-ansible-roles/aci-provision.yml
+++ b/aci-ansible-roles/aci-provision.yml
@@ -3,6 +3,7 @@
 - name: Create a Tenant using a role
   hosts: dcloud-fabric
   roles:
+    - ConfigSnap
     - CreateTN
     - CreateVRF
     - CreateBD
