--- a/aci-ansible-roles/roles/CreateBD/tasks/main.yml
+++ b/aci-ansible-roles/roles/CreateBD/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Add Bridge Domain
   aci_bd:
     host: "{{ apic }}"
-    password: "{{ pw }}"
+    password: "{{ creds }}"
     validate_certs: no
     state: present
     tenant: "{{ TN }}"
