--- a/aci-ansible-roles/group_vars/lab-fabric.yml
+++ b/aci-ansible-roles/group_vars/lab-fabric.yml
@@ -15,8 +15,24 @@ AP: ansible-web
 VMM_Domain: ACI
 
 # VPC Switch Creation
-sw_name: VPC-9K-SW-Profile
-if_selector: VPC_9K_if_selector
+sw_name: VPC-Ansible-Profile
+if_policy_group: Ansible-IF-policy-group
+phys_aep: ansible-phys
+leaf_int_profile: Ansible-IF-Profile
+
+# IF policy creation
+cdp_policy: CDP-Enable
+link_policy: 10G-Link-Policy
+lacp_mode: LACP-Active
+
+# Port Selector Names
+if_port_name:
+  - 1/5
+  - 1/6
+if_port_blk:
+  - "1_5"
+  - "1_6"
+
 
 # VMware Port Group
 aci_portgroup: ansible-tenant-bob|ansible-web-app|ansible-db
